# hillel_flask

./: .env  .gitignore  README.md  app.py  create_tables.sql  notes.py  pyproject.toml  settings.py
api/: routes.py  student.py
instance/: student.db  student2.db
migrations/: env.py
migrations/versions/: 8e36cfe185ed_add_current_health_column_to_student_.py  e1fcf6d13299_.py
models/pydantic/students/: student_create.py  student_read.py  student_update.py
models/sqlalchemy/: student.py
templates/: home_page.html
