[tool.poetry]
name = "hillel-flask"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"
sqlalchemy = "^2.0.40"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.1.0"
pydantic-settings = "^2.9.1"


[tool.poetry.group.prod.dependencies]
psycopg = "^3.2.6"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
